Play animation not working when cursor over F-curves n panel #46632

Closed
opened 2015-10-28 22:24:02 +01:00 by Adam · 8 comments

System Information
Operating system and graphics card
Windows 10
Quadro k2000

Blender Version
2.76 48f7dd6

Short description of error
With f-cruve window open and the n panel showing. If the cursor is over the n panel the play animation key has no effect. (I checked that it does work when cursor is over f curve window or over properties and many other places.)

Exact steps for others to reproduce the error
Probably not needed, but tell me if you can't reproduce

**System Information** Operating system and graphics card Windows 10 Quadro k2000 **Blender Version** 2.76 48f7dd6 **Short description of error** With f-cruve window open and the n panel showing. If the cursor is over the n panel the play animation key has no effect. (I checked that it does work when cursor is over f curve window or over properties and many other places.) **Exact steps for others to reproduce the error** Probably not needed, but tell me if you can't reproduce
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AbueloDancer

Added subscriber: @AbueloDancer

Added subscribers: @JulianEisel, @Sergey

Added subscribers: @JulianEisel, @Sergey

This is simple shortcut thing, Alt-A is not defined for the N-panel in the F-Curve editor. Don't see a reason for this tho, imo it shout be more a space-wide thing?

@JulianEisel, nice and easy for you to keep high commit ratio? :)

This is simple shortcut thing, Alt-A is not defined for the N-panel in the F-Curve editor. Don't see a reason for this tho, imo it shout be more a space-wide thing? @JulianEisel, nice and easy for you to keep high commit ratio? :)
Author

SHIFT Arrow (to go to start and end) also don't work.

SHIFT Arrow (to go to start and end) also don't work.

This issue was referenced by cd1d6d7770

This issue was referenced by cd1d6d777057c9914c70d7c7c72eb0025615e5ea
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Indeed, good for commit ratio :P

Indeed, good for commit ratio :P
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46632
No description provided.