Fix T46632: Graph editor frame navigation shortcuts not working