source/blender/editors/space_graph/space_graph.c
@@ -688,7 +688,7 @@ void ED_spacetype_ipo(void)
 	art = MEM_callocN(sizeof(ARegionType), "spacetype graphedit region");
 	art->regionid = RGN_TYPE_UI;
 	art->prefsizex = 200;
-	art->keymapflag = ED_KEYMAP_UI;
+	art->keymapflag = ED_KEYMAP_UI | ED_KEYMAP_FRAMES;
 	art->listener = graph_region_listener;
 	art->init = graph_buttons_area_init;
 	art->draw = graph_buttons_area_draw;
